--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aakash_portfolio",
-  "homepage": "https://aakashsh1999.github.io/",
+  "name": "harish_portfolio",
+  "homepage": "https://github.com/harishkshetty",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
